--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,42 @@
 	<title>Scheduler</title>
 </head>
 <body>
+	<header class="fluid-container">
+		<nav class="nav navbar-expand-lg navbar-dark bg-dark">
+			<a class="navbar-brand pl-4" href="#">Scheduler</a>
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="#">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Time Table</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">To-Do List</a>
+				</li>
+			</ul>
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="#">Login</a>
+				</li>
+				<li class="nav-item pr-4">
+					<a class="nav-link" href="#">Sign Up</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
 	<div class="container">
 		{% block content %}{% endblock content %}
 	</div>
+	<footer class="bg-dark row align-items-start">
+		<div class="ml-5">
+			<a class="text-white" href="#">About Us</a> 
+		</div>
+		<div class="ml-5">
+			<a class="text-white" href="#">Contact Us</a> 
+		</div>
+	</footer>
+	<script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
 </body>
 </html>
