--- a/templates/base.html
+++ b/templates/base.html
@@ -2,46 +2,69 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 	<title>Scheduler</title>
 </head>
 <body>
 	<header class="fluid-container">
 		<nav class="nav navbar-expand-lg navbar-dark bg-dark">
 			<a class="navbar-brand pl-4" href="#">Scheduler</a>
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="#">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Time Table</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">To-Do List</a>
-				</li>
-			</ul>
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="#">Login</a>
-				</li>
-				<li class="nav-item pr-4">
-					<a class="nav-link" href="#">Sign Up</a>
-				</li>
-			</ul>
+			<button id="ham-burger align-self-end" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			    <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'index' %}">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Time Table</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">To-Do List</a>
+					</li>
+				</ul>
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="#">Login</a>
+					</li>
+					<li class="nav-item pr-4">
+						<a class="nav-link" href="#">Sign Up</a>
+					</li>
+				</ul>
+			</div>
 		</nav>
 	</header>
-	<div class="container">
-		{% block content %}{% endblock content %}
+	<div class="row">
+		<nav class="sidebar bg-dark col-md-2 d-none d-md-block navbar-dark side-nav">
+			<div class="sidebar-sticky">
+				<ul class="nav navbar-nav flex-column pl-5">
+					<li class="nav-item">
+						<a class="nav-link" href="#">Latest Posts</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Calender</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<div class="container col-md-9 ml-sm-auto col-lg-10 px-4">
+			{% block content %}{% endblock content %}
+		</div>
 	</div>
 	<footer class="bg-dark row align-items-start">
 		<div class="ml-5">
-			<a class="text-white" href="#">About Us</a> 
+			<a class="text-white" href="{% url 'about' %}">About Us</a> 
 		</div>
 		<div class="ml-5">
 			<a class="text-white" href="#">Contact Us</a> 
 		</div>
 	</footer>
 	<script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
 </body>
 </html>
