--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,24 @@
 {% extends "Base.html" %}
 {% block content %}
-	<h1>Hello</h1>
-	<p>index</p>
+	<h1 class="mb-5">Hello There!</h1>
+	<div class="container">
+		<div class="card mb-5">
+			<div class="card-body">
+				<h5 class="card-title">Card title</h5>
+				<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				<a href="#" class="card-link">Card link</a>
+				<a href="#" class="card-link">Another link</a>
+			</div>
+		</div>
+		<div class="card mb-5">
+			<div class="card-body">
+				<h5 class="card-title">Card title</h5>
+				<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				<a href="#" class="card-link">Card link</a>
+				<a href="#" class="card-link">Another link</a>
+			</div>
+		</div>
+	</div>
 {% endblock %}
