--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,13 @@
+html,body{
+  overflow-x: hidden;
+}
 .navbar-dark .navbar-toggler {
   float:right;/*doesn't work*/
 }
-.side-nav{
-  height:100%;
-  background-color: rgba(255, 255, 255, 0.5);
-}
-footer{
-  position: absolute; 
-  left: 0 ; right: 0; bottom: 0;
-}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 101%;
+  height: 50px;
+  }
