--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,9 @@
 html,body{
   overflow-x: hidden;
 }
+.container h1{
+  margin-top: 5px;
+}
 .navbar-dark .navbar-toggler {
   float:right;/*doesn't work*/
 }
