--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,14 @@
 				</ul>
 			</div>
 		</nav>
-		<div class="container col-md-9 ml-sm-auto col-lg-10 px-4">
+		<div class="container col-md-9 ml-sm-auto col-lg-10 px-4 mb-5">
+			{% if messages %}
+				{% for message in messages %}
+					<div class="col-11 alert alert-{{ message.tags }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
 			{% block content %}{% endblock content %}
 		</div>
 	</div>
