--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -6,32 +6,27 @@
 		<div class="container">
        		<div class="row justify-content-center">
             	<div class="col-md-6">
-            		<h1>Registration Form</h1>
+            		<h1>Login Form</h1>
 					<div class="form-group">
 						{{ form|crispy }}
 					</div>
 					<div class="form-actions">
 	            		<button type="submit" class="btn btn-primary">Submit</button>
-						<a href="{% url 'login' %}" class="btn btn-info">Already have an account?</a>
+						<a href="{% url 'register' %}" class="btn btn-info">Need an account?</a>
 					</div>
             	</div>
             </div>
         </div>
 	</form>
 <script type="text/javascript">
-     let field_values=["{{ form.email.value }}","{{ form.username.value }}", "{{ form.password1.value }}", "{{ form.password2.value }}"];
-     let field_names=[ "id_{{ form.email.name }}","id_{{ form.username.name }}", "id_{{ form.password1.name }}", "id_{{ form.password2.name }}"]
+     let field_values=["{{ form.username.value }}", "{{ form.password.value }}"];
+     let field_names=[ "id_{{ form.username.name }}", "id_{{ form.password.name }}"]
      for(let i=0;i<field_names.length;i++)
      {    if(field_values[i]!=="" && field_values[i]!==null && field_names[i]!=="id_" && field_names[i]!==null && field_values[i]!="None")
                document.getElementById(field_names[i]).value=field_values[i];
      }
-     let tag=document.getElementsByTagName('small');
-     for(let i=0;i<tag.length;i++)
-     {   tag[i].classList.add("d-none");
- 		 let text="hint_"+field_names[i+1];
- 		 let list=document.getElementById(field_names[i+1]);
- 		 let stripedHtml = tag[i].innerHTML.replace(/<[^>]+>/g, '\n');//$("<ul>").html(tag[i].innerHTML).text();
- 		 list.title=stripedHtml;
- 	}
+     let tag1=document.getElementsByTagName('ul')[3];
+     tag1.style.listStyle='none';
+     tag1.classList.add("pl-0");
 </script>
 {% endblock %}
