--- a/templates/base.html
+++ b/templates/base.html
@@ -13,15 +13,12 @@
 <body>
 	<header class="fluid-container">
 		<nav class="nav navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand pl-4" href="#">Scheduler</a>
+			<a class="navbar-brand pl-4" href="{% url 'index' %}">Scheduler</a>
 			<button id="ham-burger align-self-end" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="{% url 'index' %}">Home</a>
-					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Time Table</a>
 					</li>
@@ -29,30 +26,41 @@
 						<a class="nav-link" href="#">To-Do List</a>
 					</li>
 				</ul>
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="#">Login</a>
-					</li>
-					<li class="nav-item pr-4">
-						<a class="nav-link" href="#">Sign Up</a>
-					</li>
+				<ul class="navbar-nav ml-auto mr-3">
+					{% if user.is_authenticated %}
+						<li class="nav-item">
+							<a class="nav-link btn btn-outline-light" href="{% url 'logout' %}">Logout</a>
+						</li>
+					{% else %}
+						<li class="nav-item">
+							<a class="nav-link" href="{% url 'login' %}">Login</a>
+						</li>
+						<li class="nav-item pr-4">
+							<a class="nav-link" href="{% url 'register' %}">Sign Up</a>
+						</li>
+					{% endif %}
 				</ul>
 			</div>
 		</nav>
 	</header>
 	<div class="row">
-		<nav class="sidenav navbar-vertical  fixed-left  navbar-expand-xs navbar-dark bg-dark">
-			<div class="sidebar-sticky">
-				<ul class="nav navbar-nav flex-column p-5">
-					<li class="nav-item">
-						<a class="nav-link" href="#">Latest Posts</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Calender</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
+		{% if user.is_authenticated %}
+			<nav class="sidenav navbar-vertical  fixed-left  navbar-expand-xs navbar-dark bg-dark">
+				<div class="sidebar-sticky">
+					<ul class="nav navbar-nav flex-column p-5">
+						<li class="nav-item">
+							<a class="nav-link" href="{% url 'profile' %}">My Profile</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">My Posts</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Calender</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		{% endif %}
 		<div class="container col-md-9 ml-sm-auto col-lg-10 px-4 mb-5">
 			{% if messages %}
 				{% for message in messages %}
