--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -7,7 +7,10 @@
 			<div class="card-body">
 				<h5 class="card-title">{{p.title}}</h5>
 				<h6 class="card-subtitle mb-2 text-muted">{{p.subtitle}}</h6>
-				<h6 class="card-subtitle mb-2 text-muted">Author: {{p.author}}</h6>
+				<div class="row justify-content-start ml-1">
+					<img id="profile" class="rounded rounded-circle" height="70px" width="70px" src="{{ p.author.profile.image.url }}">
+					<h6 class="col-8 card-subtitle mb-2 text-muted align-self-end">Author: {{ p.author.username }}</h6>
+				</div>
 				<p class="card-text">{{p.content}}</p>
 				<h6 class="card-subtitle mb-2 text-muted">{{p.date_posted | date:"d F, Y"}}</h6>
 				<a href="#" class="card-link">Card link</a>
