--- a/templates/base.html
+++ b/templates/base.html
@@ -62,13 +62,16 @@
 			</nav>
 		{% endif %}
 		<div class="container col-md-9 ml-sm-auto col-lg-10 px-4 mb-5">
+			<div class="m-3">
 			{% if messages %}
 				{% for message in messages %}
-					<div class="col-11 alert alert-{{ message.tags }}">
+					<div class="col-11 alert alert-{{ message.tags }} alert-dismissable">
+						<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
                         {{ message }}
                     </div>
                 {% endfor %}
             {% endif %}
+        	</div>
 			{% block content %}{% endblock content %}
 		</div>
 	</div>
