--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -1,6 +1,6 @@
 {% extends "Base.html" %}
 {% block content %}
-	<h1 class="mb-5">Hello There!</h1>
+	<h1 class="mb-5">Posts By: {{name}} ({{posts.paginator.count}})</h1>
 	<div class="container">
 		{% for p in posts %}
 		<div class="card mb-5">
@@ -15,19 +15,31 @@
 					</div>
 				</div>
 				<p class="card-text">{{p.content}}</p>
-				<a href="{% url 'post-update' pk=p.id %}" class="card-link">Update</a>
-				<a href="{% url 'post-delete' pk=p.id %}" class="card-link">Delete</a>
+				{% if p.author == request.user %}
+					<a href="{% url 'post-update' pk=p.id %}" class="card-link">Update</a>
+					<a href="{% url 'post-delete' pk=p.id %}" class="card-link">Delete</a>
+				{% endif %}
 			</div>
 		</div>
 		{% endfor %}
-		<div class="card mb-5">
-			<div class="card-body">
-				<h5 class="card-title">Card title</h5>
-				<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				<a href="#" class="card-link">Card link</a>
-				<a href="#" class="card-link">Another link</a>
-			</div>
+		<div class="row justify-content-center mb-5">
+			{% if posts.has_other_pages %}
+				{% if posts.has_previous %}
+					<a href="?page=1" class="btn btn-outline-info m-2">First</a>
+					<a href="?page={{ posts.previous_page_number }}" class="btn btn-outline-info m-2">Previous</a>
+				{% endif %}
+				{% for num in posts.paginator.page_range %}
+					{% if posts.number == num %}
+						<a href="?page={{ num }}" class="btn btn-info m-2">{{num}}</a>
+					{% elif num > posts.number|add:'-3' and num < posts.number|add:'3' %}
+						<a href="?page={{ num }}" class="btn btn-outline-info m-2">{{num}}</a>
+					{% endif %}
+				{% endfor %}
+				{% if posts.has_next %}
+					<a href="?page={{ posts.next_page_number }}" class="btn btn-outline-info m-2">Next</a>
+					<a href="?page={{ posts.paginator.num_pages }}" class="btn btn-outline-info m-2">Last</a>
+				{% endif %}
+			{% endif %}	
 		</div>
 	</div>
 {% endblock %}
