--- a/templates/base.html
+++ b/templates/base.html
@@ -46,16 +46,16 @@
 			</div>
 		</nav>
 	</header>
-	<div class="row">
+	<div class="row fluid-container">
 		{% if user.is_authenticated %}
 			<nav class="sidenav navbar-vertical  fixed-left  navbar-expand-xs navbar-dark bg-dark">
 				<div class="sidebar-sticky">
-					<ul class="nav navbar-nav flex-column p-5">
+					<ul id="sidebar" class="nav navbar-nav flex-column p-5">
 						<li class="nav-item">
 							<a class="nav-link" href="{% url 'profile' %}">My Profile</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{% url 'my-posts' %}">My Posts</a>
+							<a class="nav-link" href="{% url 'all-posts' user.username %}">My Posts</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Calender</a>
