--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -5,16 +5,17 @@
 		{% csrf_token %}
 		<div class="container">
        		<div class="row justify-content-center">
-            	<div class="col-md-6">
-            		<h1>Login Form</h1>
+	            	<div class="col-md-6">
+            			<h1>Login Form</h1>
 					<div class="form-group">
 						{{ form|crispy }}
 					</div>
 					<div class="form-actions">
-	            		<button type="submit" class="btn btn-primary">Submit</button>
-						<a href="{% url 'register' %}" class="btn btn-info">Need an account?</a>
+	            			<button type="submit" class="btn btn-primary">Submit</button>
+	            			<a href="{% url 'register' %}" class="btn btn-info">Need an account?</a>
+	            			<a href="{% url 'password_reset' %}" class="btn btn-outline-secondary">Forgot Password</a>
 					</div>
-            	</div>
+	            	</div>
             </div>
         </div>
 	</form>
