Added event app

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,25 +5,22 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/all.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/fontawesome.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-	<link rel="stylesheet" href="{% static 'css/all.min.css' %}"
-          type="text/css">
 	<title>Scheduler</title>
 </head>
 <body>
 	<header class="fluid-container">
-		<nav class="nav navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand pl-4" href="{% url 'index' %}">Scheduler</a>
+		<nav class="nav navbar-expand-lg navbar-dark bg-dark fixed-top custom">
+			<a class="navbar-brand pl-4 pt-2" href="{% url 'index' %}"><img src="{% static 'assets/plan,post,proclaim-logo.png' %}" height="30px"></a>
 			<button id="ham-burger align-self-end" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Time Table</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">To-Do List</a>
+						<a class="nav-link" href="{% url 'event_new' %}">Add an Event</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="{% url 'post-create' %}">Create a Post</a>
@@ -48,23 +45,45 @@
 	</header>
 	<div class="row fluid-container">
 		{% if user.is_authenticated %}
-			<nav class="sidenav navbar-vertical  fixed-left  navbar-expand-xs navbar-dark bg-dark">
-				<div class="sidebar-sticky">
-					<ul id="sidebar" class="nav navbar-nav flex-column p-5">
-						<li class="nav-item">
-							<a class="nav-link" href="{% url 'profile' %}">My Profile</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{% url 'all-posts' user.username %}">My Posts</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Calender</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
+			<div class="col-3">
+				<nav class="sidenav navbar-vertical  fixed-left  navbar-expand-xs navbar-dark bg-dark" id="mySidebar">
+					<div class="sidebar-sticky flex-column">
+						<ul class="nav navbar-nav align-items-center">
+							<li class="nav-item m-2">
+								<a class="nav-link">
+									<button class="btn btn-info" id="menu-toggle" onclick="navClick()"><i class="fas fa-bars openbtn"></i></button>
+								</a>
+							</li>
+							<li class="nav-item m-2">
+								<a class="nav-link" href="{% url 'index' %}">
+									<i class="fas fa-home fa-2x"></i>
+									<span class="nav-link-text pl-3 d-none">Home</span>
+								</a>
+							</li>
+							<li class="nav-item m-2">
+								<a class="nav-link" href="{% url 'all-posts' user.username %}">
+									<i class="fas fa-stream fa-2x"></i>
+									<span class="nav-link-text pl-3 d-none">My Posts</span>
+								</a>
+							</li>
+							<li class="nav-item m-2">
+								<a class="nav-link" href="{% url 'event' user.username  %}">
+									<i class="fas fa-th fa-2x"></i>
+									<span class="nav-link-text pl-3 d-none">My Events</span>
+								</a>
+							</li>
+							<li class="nav-item m-2">
+								<a class="nav-link" href="{% url 'profile' %}">
+									<i class="fas fa-user fa-2x"></i>
+									<span class="nav-link-text pl-3 d-none">My Profile</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+			</div>
 		{% endif %}
-		<div class="container col-md-9 ml-sm-auto col-lg-10 px-4 mb-5">
+		<div class="container col-md-9 ml-sm-auto col-lg-10 px-4 mb-5 space">
 			<div class="m-3">
 			{% if messages %}
 				{% for message in messages %}
@@ -82,12 +101,13 @@
 		<div class="ml-5 pt-2">
 			<a class="text-white" href="{% url 'about' %}">About Us</a> 
 		</div>
-		<div class="ml-5 pt-2">
-			<a class="text-white" href="#">Contact Us</a> 
+		<div class="ml-auto">
+			<a class="navbar-brand pl-4 pt-2" href="{% url 'index' %}"><img src="{% static 'assets/plan,post,proclaim-logo.png' %}" height="30px"></a>
 		</div>
 	</footer>
 	<script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/all.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
 </body>
 </html>
