--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,6 @@
 .row{
   width: 99%;
 }
-.container h1{
-  margin-top: 5px;
-}
 .footer {
   position: fixed;
   left: 0;
@@ -15,9 +12,67 @@
   object-fit: contain;
   border: 1px solid #dee2e6;
 }
-/*Fix it!!!!*/
-#sidebar {
-  position: -webkit-sticky;
-  position: sticky;
+.custom{
+  height: 50px;
+}
+.space{
+  margin-top: 100px;
+  padding-bottom: 100px;
+}
+#mySidebar {
+  height: 88%; 
+  width: 65px; /* Changed through javascript */
+  margin-top: 50px;
+  position: fixed; 
+  z-index: 1; 
   top: 0;
+  left: 0;
+  overflow-x: hidden; 
+  padding-top: 20px;
+  transition: 0.5s; 
+}
+/* Unknown Territory*/
+.calendar {
+  width: 98%;
+  margin: auto;
+  font-size: 13px;
+}
+
+.calendar tr, .calendar td {
+  border: 1px solid black;
+}
+
+.calendar th {
+  padding: 10px;
+  text-align: center;
+  font-size: 18px;
+}
+
+.calendar td {
+  width: 200px;
+  height: 150px;
+  padding: 20px 0px 0px 5px;
+  vertical-align: baseline;
+}
+
+.month {
+  font-size: 25px;
+}
+
+.date {
+  font-size: 2.5rem;
+}
+
+#month-button:after{
+  display: none;
+}
+
+.calendar tbody tr td ul{
+  list-style: none;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.calendar tbody tr td ul a{
+  text-decoration: none;
 }
